--- a/src/public/css/control.css
+++ b/src/public/css/control.css
@@ -318,7 +318,7 @@ a.food-button i {
   position: absolute;
   bottom: 0;
   left: 17.5%;
-  top: 120%;
+  top: 110%;
   transition: background-color 350ms, box-shadow 700ms;
   -o-transition: background-color 350ms, box-shadow 700ms;
   -moz-transition: background-color 350ms, box-shadow 700ms;
@@ -412,3 +412,6 @@ a.led-button i {
   margin: 0;
   width: 225px;
   display: inline-block; }
+
+.contrl2 {
+  margin-top: 50px; }
