--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -226,8 +226,8 @@
                 document.querySelector('#lux').style.color = 'red';
                 document.querySelector('#title-light').style.color = 'red';
             } else if(data.Lux < 200){
-                document.querySelector('#lux').style.color = 'black';
-                document.querySelector('#title-light').style.color = 'black';
+                document.querySelector('#lux').style.color = 'cyan';
+                document.querySelector('#title-light').style.color = 'cyan';
             } else {
                 document.querySelector('#lux').style.color = '';
                 document.querySelector('#icon-light').style.color = '';
