--- a/src/resources/views/farm.hbs
+++ b/src/resources/views/farm.hbs
@@ -109,7 +109,14 @@
                     </div>
                 </div>
             </div>
-            <div class="row report">
+            <div class="row" style="margin-top: 70px;">
+                <p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: bold;">Chú thích cảnh báo: 
+                    <span style="display: block; background-color: red; width: 18px; height: 18px; margin: 0; position: absolute; left: 35.5%; top: 77.7%;"></span><p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: lighter; display: block; position: absolute; left: 37.25%; top: 77.3%;">Quá cao</p>
+                    <span style="display: block; background-color: #595c69; width: 18px; height: 18px; margin: 0; position: absolute; left: 49.5%; top: 77.7%;"></span><p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: lighter; display: block; position: absolute; left: 51.25%; top: 77.3%;">Phù hợp</p>
+                    <span style="display: block; background-color: cyan; width: 18px; height: 18px; margin: 0; position: absolute; left: 64.5%; top: 77.7%;"></span><p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: lighter; display: block; position: absolute; left: 66.25%; top: 77.3%;">Quá thấp</p>
+                </p>
+            </div>
+            <div class="row report" style="margin-top: 70px;">
                 <div class="col-lg-12">
                     <div class="card-report">
                         <div class="chart-info-box">
