--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,16 +1,18 @@
 <header class="header-home">
     <nav class="nav-home">
-        <h1>Hệ thống vườn ao chuồng</h1>
+        <h1 class="h1-home">HỆ THỐNG VƯỜN AO CHUỒNG</h1>
+        
+        <h4 class="h4-home">Hệ thống giúp quản lý trang trại, quản lý vườn rau, ao cá, nuôi gà.v... một cách dễ dàng theo phân loại từng nhóm.</h4>
     </nav>
 </header>
 
 <div class="page-home">
     <div class="container-home">
         <div class="homepage-feature">
-            <a href="farm" class="farm-page">
-                <img src="/images/farm.JPG" alt="" class="img-home">
+            <a href="farm" class="farm-page" style="margin-right: 50px;">
+                <img src="/images/farm.png" alt="" class="img-home">
             </a>
-            <a href="pond" class="farm-page">
+            <a href="pond" class="farm-page" style="margin-left: 50px;">
                 <img src="/images/pond.JPG" alt="" class="img-home">
             </a>
         </div>
