--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -21,8 +21,7 @@
     <link rel="stylesheet" href="/css/warn.css">
     <link rel="stylesheet" href="/css/control.css">
     <link rel="stylesheet" href="/css/home.css">
-    
-    {{!-- <link rel="stylesheet" href="/css/chartist.min.css"> --}}
+    <link rel="stylesheet" href="/css/chartist.min.css">
     <!-- Google Web Fonts -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -34,17 +33,12 @@
 
     <link rel="stylesheet" href="/fontawesome-free-6.4.0-web/css/fontawesome.css">
     <link rel="stylesheet" href="/fontawesome-free-6.4.0-web/css/all.min.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-    
-    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-database.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    {{!-- <script src="/js/chartist.js"></script>
-    <script src="/js/chartist.min.js"></script> --}}
+    
+    <script src="/js/chartist.min.js"></script>
 
-    {{!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-    <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script> --}}
     {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> --}}
 
 
@@ -212,7 +206,7 @@
 
             tempChart.update();
 
-            if (humCount >= 0) {
+            if (humCount >= 5) {
                 humChart.data.labels.shift();
                 humChart.data.series[0].shift();
             } else {
