--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -95,3 +95,7 @@
   margin-block-end: 1.33em;
   margin-inline-start: 0px;
   margin-inline-end: 0px; }
+
+.goHome {
+  color: white;
+  font-size: 20px; }
