--- a/src/resources/scss/value.scss
+++ b/src/resources/scss/value.scss
@@ -51,6 +51,51 @@
     align-items: center;
 }
 
+.tempwVa {
+    border-radius: 3px;
+    background: #cbcb1e;
+    padding: 15px;
+    margin-top: -40px;
+    margin-right: 15px;
+    margin-left: 20px;
+    float: left;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.phVa {
+    border-radius: 3px;
+    background: #d21c1c;
+    padding: 15px;
+    margin-top: -40px;
+    margin-right: 15px;
+    margin-left: 20px;
+    float: left;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.foodVa_pond {
+    border-radius: 3px;
+    background: #46d946;
+    padding: 15px;
+    margin-top: -40px;
+    margin-right: 15px;
+    margin-left: 20px;
+    float: left;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 div.card-icon i {
     color: white;
     font-size: 35px;
