--- a/src/resources/views/pond-ctrl.hbs
+++ b/src/resources/views/pond-ctrl.hbs
@@ -1,8 +1,10 @@
 <div class="wrapper">
     <div class="content-page">
         <div class="dsy-aside dsy-aside-fixed">
-                <div class="dsy-aside-brand"></div>
-                <hr>
+                <div class="dsy-aside-brand">
+                    <a href="/" class="goHome"><i class="fa-solid fa-house"></i></a>
+                    <p class="title-menu">Ao cá</p>
+                </div>
                 <div class="dsy-aside-menu-wrapper">
                     <div class="dsy-aside-menu">
                         <ul class="dsy-aside-nav sidebar-toggle-view">
@@ -48,7 +50,7 @@
                     <div class="chart-info-box ctrl-box">
                         <section>
                             <div style="width:110px; display: inline-block; float: left; margin-left: 39px;">
-                                <a href="#" id="btn-on4" class="food-button" onclick="submitFoodValue()" style="margin: 0 !important;"><i class="fas fa-drumstick-bite"></i></a>
+                                <a href="#" id="btn-on4" class="food-button" onclick="submitFoodValue()" style="margin: 0 !important;"><i class="fa-solid fa-fish"></i></a>
                             </div>
                             <h3 class="h3ctrl">Thức ăn</h3>
                             <div style="width:300px; display: inline-block;">
