--- a/src/resources/views/pond.hbs
+++ b/src/resources/views/pond.hbs
@@ -2,6 +2,7 @@
     <div class="content-page">
         <div class="dsy-aside dsy-aside-fixed">
                 <div class="dsy-aside-brand">
+                    <a href="/" class="goHome"><i class="fa-solid fa-house"></i></a>
                     <p class="title-menu">Ao cá</p>
                 </div>
                 <div class="dsy-aside-menu-wrapper">
@@ -44,8 +45,8 @@
                 <div class="col-lg-4">
                     <div class="chart-info-box">
                         <p>
-                            <div class="card-icon lightVa">
-                                <i class="material-icons">lightbulb_outline</i>
+                            <div class="card-icon phVa">
+                                <i class="fa-solid fa-droplet"></i>
                             </div>
                             <p class="pvalue">PH</p><br>
                             <h3 id="ph"></h3>
@@ -57,8 +58,8 @@
                 <div class="col-lg-4">
                     <div class="chart-info-box">
                         <p>
-                            <div class="card-icon foodVa">
-                                <i class="material-icons">restaurant</i>
+                            <div class="card-icon foodVa_pond">
+                                <i class="fa-solid fa-fish-fins"></i>
                             </div>
                             <p class="pvalue">Lượng thức ăn</p><br>
                             <h3 id="thucan"></h3>
@@ -74,7 +75,7 @@
                     <div class="chart-info-box">
                         <p>
                             <div class="card-icon airVa">
-                                <i class="fas fa-wind"></i>
+                                <i class="fa-solid fa-water"></i>
                             </div>
                             <p class="pvalue">Độ đục</p><br>
                             <h3 id="turbidity"></h3>
@@ -86,8 +87,8 @@
                 <div class="col-lg-4">
                     <div class="chart-info-box">
                         <p>
-                            <div class="card-icon airVa">
-                                <i class="fas fa-wind"></i>
+                            <div class="card-icon tempwVa">
+                                <i class="fa-solid fa-temperature-three-quarters"></i>
                             </div>
                             <p class="pvalue">Nhiệt độ</p><br>
                             <h3 id="tempWater"></h3>
