--- a/src/resources/views/report.hbs
+++ b/src/resources/views/report.hbs
@@ -3,6 +3,7 @@
 
         <div class="dsy-aside dsy-aside-fixed">
                 <div class="dsy-aside-brand">
+                    <a href="/" class="goHome"><i class="fa-solid fa-house"></i></a>
                     <p class="title-menu">Chuồng gà</p>
                 </div>
                 
