--- a/src/resources/views/control.hbs
+++ b/src/resources/views/control.hbs
@@ -2,6 +2,7 @@
     <div class="content-page">
         <div class="dsy-aside dsy-aside-fixed">
                 <div class="dsy-aside-brand">
+                    <a href="/" class="goHome"><i class="fa-solid fa-house"></i></a>
                     <p class="title-menu">Chuồng gà</p>
                 </div>
                 
