--- a/src/resources/views/farm.hbs
+++ b/src/resources/views/farm.hbs
@@ -2,6 +2,7 @@
     <div class="content-page">
         <div class="dsy-aside dsy-aside-fixed">
                 <div class="dsy-aside-brand">
+                    <a href="/" class="goHome"><i class="fa-solid fa-house"></i></a>
                     <p class="title-menu">Chuồng gà</p>
                 </div>
                 <div class="dsy-aside-menu-wrapper">
@@ -110,11 +111,10 @@
                 </div>
             </div>
             <div class="row" style="margin-top: 70px;">
-                <p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: bold;">Chú thích cảnh báo: 
-                    <span style="display: block; background-color: red; width: 18px; height: 18px; margin: 0; position: absolute; left: 35.5%; top: 77.7%;"></span><p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: lighter; display: block; position: absolute; left: 37.25%; top: 77.3%;">Quá cao</p>
-                    <span style="display: block; background-color: #595c69; width: 18px; height: 18px; margin: 0; position: absolute; left: 49.5%; top: 77.7%;"></span><p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: lighter; display: block; position: absolute; left: 51.25%; top: 77.3%;">Phù hợp</p>
-                    <span style="display: block; background-color: cyan; width: 18px; height: 18px; margin: 0; position: absolute; left: 64.5%; top: 77.7%;"></span><p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: lighter; display: block; position: absolute; left: 66.25%; top: 77.3%;">Quá thấp</p>
-                </p>
+                <p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: bold;">Chú thích cảnh báo: </p>
+                <span style="display: block; background-color: red; width: 18px; height: 18px; margin-top: 5px; margin-left: 150px;"></span><p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: lighter; display: block; margin-left: 10px;">Quá cao</p>
+                <span style="display: block; background-color: #595c69; width: 18px; height: 18px; margin-top: 5px; margin-left: 100px;"></span><p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: lighter; display: block; margin-left: 10px;">Phù hợp</p>
+                <span style="display: block; background-color: cyan; width: 18px; height: 18px; margin-top: 5px; margin-left: 100px;"></span><p style="color: #8b92a9; font-size: 20px; line-height: 1.4em; font-weight: lighter; display: block; margin-left: 10px;">Quá thấp</p>
             </div>
             <div class="row report" style="margin-top: 70px;">
                 <div class="col-lg-12">
