--- a/src/resources/views/pond-warn.hbs
+++ b/src/resources/views/pond-warn.hbs
@@ -2,7 +2,8 @@
     <div class="content-page">
         <div class="dsy-aside dsy-aside-fixed">
                 <div class="dsy-aside-brand">
-                    <p class="title-menu">Chuồng gà</p>
+                    <a href="/" class="goHome"><i class="fa-solid fa-house"></i></a>
+                    <p class="title-menu">Ao cá</p>
                 </div>
                 
                 <div class="dsy-aside-menu-wrapper">
