--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -195,7 +195,7 @@
             // Update the temperature chart with the new data
             var time = new Date().toLocaleTimeString();
 
-            if (tempCount >= 0) {
+            if (tempCount >= 4) {
                 tempChart.data.labels.shift();
                 tempChart.data.series[0].shift();
             } else {
@@ -206,7 +206,7 @@
 
             tempChart.update();
 
-            if (humCount >= 0) {
+            if (humCount >= 4) {
                 humChart.data.labels.shift();
                 humChart.data.series[0].shift();
             } else {
@@ -322,14 +322,14 @@
             const savedHumChartData = localStorage.getItem('humChartData');
 
             if (savedTempChartLabels && savedTempChartData) {
-                tempChart.data.labels = JSON.parse(savedTempChartLabels);
-                tempChart.data.series[0] = JSON.parse(savedTempChartData);
+                tempChart.data.labels = JSON.parse(savedTempChartLabels).slice(-5);
+                tempChart.data.series[0] = JSON.parse(savedTempChartData).slice(-5);
                 tempChart.update();
             }
 
             if (savedHumChartLabels && savedHumChartData) {
-                humChart.data.labels = JSON.parse(savedHumChartLabels);
-                humChart.data.series[0] = JSON.parse(savedHumChartData);
+                humChart.data.labels = JSON.parse(savedHumChartLabels).slice(-5);
+                humChart.data.series[0] = JSON.parse(savedHumChartData).slice(-5);
                 humChart.update();
             }
         }
