--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -13,7 +13,7 @@
                 <img src="/images/farm.png" alt="" class="img-home">
             </a>
             <a href="pond" class="farm-page" style="margin-left: 50px;">
-                <img src="/images/pond.JPG" alt="" class="img-home">
+                <img src="/images/fish.png" alt="" class="img-home">
             </a>
         </div>
     </div>
