--- a/src/resources/views/report.hbs
+++ b/src/resources/views/report.hbs
@@ -230,7 +230,7 @@
             td5.textContent = data.Food + ' ' + 'g';
             tr.appendChild(td5);
             const td6 = document.createElement('td');
-            td6.textContent = data.NH3.toFixed(2) + ' ' + 'ppm';
+            td6.textContent = data.NH3.toFixed(4) + ' ' + '%';
             tr.appendChild(td6);
             const td7 = document.createElement('td');
             const date = new Date(data.updateTime);
@@ -251,7 +251,7 @@
         const temperature = localStorage.getItem('temperature');
 
         document.querySelector('#lux').textContent = lux + ' ' + 'Lux';
-        document.querySelector('#nh3').textContent = nh3 + ' ' + 'ppm';
+        document.querySelector('#nh3').textContent = nh3 + ' ' + '%';
         document.querySelector('#food').textContent = food + ' ' + 'g';
         document.querySelector('#humidity').textContent = humidity;
         document.querySelector('#temperature').textContent = temperature;
