--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,8 +1,8 @@
 <header class="header-home">
     <nav class="nav-home">
-        <h1 class="h1-home">HỆ THỐNG VƯỜN AO CHUỒNG</h1>
+        <h1 class="h1-home">HỆ THỐNG AO CHUỒNG</h1>
         
-        <h4 class="h4-home">Hệ thống giúp quản lý trang trại, quản lý vườn rau, ao cá, nuôi gà.v... một cách dễ dàng theo phân loại từng nhóm.</h4>
+        <h4 class="h4-home">Hệ thống giúp quản lý trang trại, quản lý ao cá, nuôi gà.v... một cách dễ dàng theo phân loại từng nhóm.</h4>
     </nav>
 </header>
 
