--- a/src/resources/views/pond-ctrl.hbs
+++ b/src/resources/views/pond-ctrl.hbs
@@ -105,6 +105,41 @@
                 </div>
                 
             </div>
+
+            <div class="row report" style="margin-top: 200px;">
+                <div class="col-lg-12">
+                    <div class="card-report">
+                        <div class="card-header farm" style="margin-left: 20px; width: 1340px;">
+                            <h4>Sau khi bật chế độ tự động</h4>
+                            <p>Điều kiện các thiết bị hoạt động</p>
+                        </div>
+                        <div class="card-body">
+                            <table class="condition">
+                                <thead>
+                                    <tr class="ctrl_th">
+                                        <th>Số lần cho ăn</th>
+                                        <th>Điều kiện</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Lần 1</td>
+                                        <td>1500g với nước trong <br>1000g với nước đục</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Lần 2</td>
+                                        <td>1500g với nước trong <br>1000g với nước đục</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Lần 3</td>
+                                        <td>1500g với nước trong <br>1000g với nước đục</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>                        
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
